navbar__item alignment fixed

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -119,8 +119,7 @@
     // use margin instead of padding so that the border-bottom
     // on active looks better
     padding: 0;
-    margin: var(--ifm-navbar-item-padding-vertical)
-      var(--ifm-navbar-item-padding-horizontal);
+    margin: 0.25rem 0.64rem;
   }
 
   &__link {
